Fix horizontal scrollbars showing up weirdly.

--- a/web/css/big.css
+++ b/web/css/big.css
@@ -291,10 +291,6 @@ html, body
 	margin: 20px;
 }
 
-.u-full-width
-{
-	overflow-x:scroll;
-}
 
 .bottom
 {
